# runefix-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: output.txt
scripts/: test_cli.sh  test_cli_err.sh
src/: main.rs
src/commands/: cli.rs  dispatch.rs  input.rs  mod.rs
src/commands/cmds/: atoms.rs  graphemes.rs  init.rs  mod.rs  slice.rs  split.rs  truncate.rs  version.rs  width.rs  widths.rs
src/config/: context.rs  mod.rs  settings.rs
src/i18n/: keys.rs  lang.rs  mod.rs  utils.rs
src/i18n/locales/: en_us.rs  ja_jp.rs  mod.rs  zh_cn.rs
src/style/: consts.rs  mod.rs  print.rs  term.rs
